--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,9 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
+  "extends": "./tsconfig.path.json",
   "include": [
     "src"
-  ]
+  ],
+  "compilerOptions": {
+    "module": "esnext"
+  }
 }
